# personalize-recommdation-system-

./: .gitignore  .replit  Dockerfile.backend  Dockerfile.production  README.md  dev_setup.bat  dev_setup.sh  docker-compose.production.yml  docker-compose.yml  nginx.production.conf  package-lock.json  prometheus.yml  pyproject.toml  quick_start.py  replit.md  requirements.txt  run_project.py  simple_api.py  start-dev.sh  start_backend.bat  start_frontend.bat  start_server.py  test_api_debug.py  test_course_ids.py  test_debug.py  test_interest_recommendations.py  test_setup.py
.github/workflows/: ci.yml
data/: courses.csv
docker/: Dockerfile  docker-compose.yml
frontend/: Dockerfile  FIREBASE_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CareerRecommendations.tsx  CourseCard.tsx  Dashboard.tsx  ExplanationIcons.tsx  InterestAssessment.tsx  InterestBasedRecommendations.tsx  LearningPath.tsx  LoadingSkeleton.tsx  Login.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/firebase/: config.ts
frontend/src/services/: api.ts  dataMigration.ts  firebaseStorage.ts  gamification.ts  hybridStorage.ts
frontend/src/types/: api.ts
src/edurec/: __init__.py
src/edurec/api/: __init__.py  main.py
src/edurec/data/: __init__.py  data_loader.py  generate_sample.py
src/edurec/gamification/: __init__.py  badge_definitions.py  engine.py  models.py  storage.py
src/edurec/models/: __init__.py  als_recommender.py  base.py  baseline.py  demo_hybrid.py  hybrid.py  (+1 more)
(+16 files in other folders)
